# filedrop

./: .gitignore  README.md  build-windows.bat  build.sh  filedrop.py  index.html  package.json  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_transfer.rs  http_server.rs  lib.rs  mdns.rs  trust_list.rs
