[package]
name = "app"
version = "0.1.0"
description = "FileDrop - 跨平台文件传输工具"
authors = ["FileDrop Team"]
license = "MIT"
repository = "https://github.com/Tina-xiaoxiami/filedrop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# mDNS service discovery
mdns-sd = "0.11"

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "limit"] }
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
dirs = "5.0"
whoami = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = []
